--- a/Pizzaria/Pizzaria.html
+++ b/Pizzaria/Pizzaria.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="Pizzaria.js"></script>
+    <script type="text/javascript" src="Pizzariavs2.js"></script>
 </head>
 <body>
-    
+   <input id="quant" name="quant" value="" type="text">
+   <button onclick="enviar()">Confirmar</button>
 </body>
 </html>
